--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: android
 android:
   components:
-
-     - tools
-     - platform-tools
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    # - tools
+    # - platform-tools
 
     # The BuildTools version used by your project
     - build-tools-19.1.0
