--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: android
-android:
+jdk: oraclejdk8
 components:
 # Uncomment the lines below if you want to
 # use the latest revision of Android SDK Tools
