--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
 language: android
-jdk: oraclejdk8
-components:
-# Uncomment the lines below if you want to
-# use the latest revision of Android SDK Tools
-# - platform-tools
-# - tools
+android:
+  components:
+    - tools
+    - build-tools-24.0.1
+    - android-24
+    - platform-tools
+    - extra-android-support # because I'm use support library
+    - extra-android-m2repository # because I'm use support library
+  licenses:
+    - '.+'
 
-# The BuildTools version used by your project
-- build-tools-25.0.0
+sudo: required
 
-# The SDK version used to compile your project
-- android-25
+jdk:
+  - oraclejdk8
 
+install: true
 
-# Specify at least one system image,
-# if you need to run emulator(s) during your tests
-- sys-img-armeabi-v7a-android-22
-- sys-img-armeabi-v7a-android-17
+before_script:
+  - chmod +x gradlew
 
-before_install:
-- chmod +x gradlew
+script:
+  - ./gradlew assembleRelease --stacktrace
