--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,66 @@
-language: android
-android:
-  components:
-    - tools
-    - build-tools-24.0.1
-    - android-24
-    - platform-tools
-    - extra-android-support # because I'm use support library
-    - extra-android-m2repository # because I'm use support library
-  licenses:
-    - '.+'
-
-sudo: required
-
-jdk:
-  - oraclejdk8
-
-install: true
-
-before_script:
-  - chmod +x gradlew
-
-script:
-  - ./gradlew assembleRelease --stacktrace
+{
+  "sudo": false,
+  "language": "android",
+  "jdk": "oraclejdk8",
+  "git": {
+    "submodules": false
+  },
+  "android": {
+    "components": [
+      "platform-tools",
+      "tools",
+      "build-tools-23.0.3",
+      "android-23",
+      "extra-android-support",
+      "extra-android-m2repository",
+      "sys-img-armeabi-v7a-android-21"
+    ]
+  },
+  "before_cache": [
+    "rm -f $HOME/.gradle/caches/modules-2/modules-2.lock"
+  ],
+  "cache": {
+    "directories": [
+      "$HOME/.gradle/caches/",
+      "$HOME/.gradle/wrapper/"
+    ]
+  },
+  "before_install": [
+    "sed -i 's/git@github.com:/https:\\/\\/github.com\\//' .gitmodules",
+    "git submodule update --init --recursive",
+    "wget http://dl.google.com/android/repository/android-ndk-$NDK_VERSION-linux-x86_64.zip",
+    "chmod +x android-ndk-$NDK_VERSION-linux-x86_64.zip",
+    "unzip -q android-ndk-$NDK_VERSION-linux-x86_64.zip",
+    "rm -rf android-ndk-$NDK_VERSION-linux-x86_64.zip",
+    "export ANDROID_NDK_HOME=`pwd`/android-ndk-$NDK_VERSION",
+    "export PATH=${PATH}:${ANDROID_NDK_HOME}"
+  ],
+  "script": [
+    "./gradlew createPackage -i -PpreReleaseVersion=$PACKAGE_VERSION -PgitCommitVersion=$TRAVIS_COMMIT --stacktrace",
+    "echo no | android create avd --force -n Arm21 -t android-21 -b armeabi-v7a -c 12M",
+    "emulator -avd Arm21 -no-skin -no-audio -no-window &",
+    "android-wait-for-emulator",
+    "cd test-app && ./gradlew runtest --stacktrace",
+    "cd .."
+  ],
+  "before_deploy": [
+    "FULL_PACKAGE_VERSION=`sed -n 's/\\s*\"version\":\\s*\"\\([a-zA-Z0-9\\.]*\\)\"\\s*,*/\\1/p' dist/package.json`",
+    "ls -la dist",
+    "mv dist/tns-android*.tgz ../.deploymentpackage",
+    "mv .travis ../",
+    "cd ..",
+    "rm -rf android-runtime",
+    "tar -zxvf .deploymentpackage",
+    "mv package android-runtime",
+    "cd android-runtime",
+    "rm ../.deploymentpackage",
+    "nvm install 4.2.6",
+    "nvm use 4.2.6",
+    "mv ../.travis ./",
+    "node ./.travis/add-publishConfig.js next"
+  ],
+  "global_env": "NDK_VERSION=r11c DATE=$(date +%Y-%m-%d) PACKAGE_VERSION=next-$DATE-$TRAVIS_BUILD_NUMBER PACKAGE_NAME=tns-android",
+  "group": "stable",
+  "dist": "precise",
+  "os": "linux"
+}
